--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -2,6 +2,15 @@ server:
   port: 8081
 
 spring:
+  profiles:
+    #主配置文件，配置了这个会优先读取里面的属性覆盖主配置文件的属性
+    active: dev
+  jackson:
+    #时间格式化
+    date-format: yyyy-MM-dd HH:mm:ss
+    #时区设置
+    time-zone: Asia/Chongqing
+  #数据源配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/test
@@ -28,5 +37,5 @@ mybatis-plus:
 
 #logging
 logging:
-  level: warn
+  config: classpath:logback-config.xml
 
