--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>com.study</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.study</groupId>
             <artifactId>config</artifactId>
             <version>${project.version}</version>
         </dependency>
