--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   #数据源配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test
+    url: jdbc:mysql://127.0.0.1:3306/simple
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
@@ -26,13 +26,13 @@ mybatis-plus:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
     #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-    field-strategy: 2
+    field-strategy: 0
     #驼峰下划线转换
-    db-column-underline: true
+    db-column-underline: false
     #刷新mapper 调试神器
     refresh-mapper: true
   configuration:
-    map-underscore-to-camel-case: true
+    map-underscore-to-camel-case: false
     cache-enabled: false
 
 #logging
