--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -31,9 +31,9 @@ spring:
       min-idle: 0
     timeout: 0
 mybatis-plus:
-  mapper-locations: classpath:/mapper/user/*Mapper.xml
+  mapper-locations: classpath:/dao/*/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  type-aliases-package: com.study.user.entity
+  type-aliases-package: com.study.*.entity
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
