--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
-            <version>2.1.4</version>
+            <version>2.1.8</version>
         </dependency>
 
         <dependency>
@@ -158,10 +158,11 @@
             <version>${shiro.version}</version>
         </dependency>
 
+        <!-- 模板引擎 -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.7</version>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.0</version>
         </dependency>
 
         <dependency>
