--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -30,6 +30,10 @@ spring:
       max-idle: 8
       min-idle: 0
     timeout: 0
+  data:
+    elasticsearch:
+      cluster-name: chengyin
+      cluster-nodes: 127.0.0.1:9300
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   #实体扫描，多个package用逗号或者分号分隔
